# rag-r1-final

./: .gitignore  Dockerfile  README.md  corpus_generator.py  env.py  graders.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  task_configs.py  tasks.py
corpora/: easy.json  hard.json  medium.json
graders/: __init__.py  common.py  easy.py  hard.py  medium.py
server/: app.py
