[project]
name = "rag-rl"
version = "1.0.0"
description = "RL environment for optimal chunk selection in RAG pipelines"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "openai>=1.30.0",
    "numpy>=1.26.0",
    "torch",
]

[tool.uv.scripts]
server = "uvicorn main:app --host 0.0.0.0 --port 7860"
